# basalt

./: .gitignore  Cargo.toml  README.md  config.json  rust-toolchain.toml  second_file.json
.github/workflows/: ci.yml
assets/markdown/: intr.md  sample.md  sample2.md
public/: index.html
scripts/: build-demo-web.sh  setup-web.sh
src/: basalt.rs  fractal_clock.rs  lib.rs  main.rs  markdown.rs  web.rs
src/features/: mod.rs
src/features/configuration/: configuration.rs
src/features/note_graph/: mod.rs  models.rs  note_graph.rs  note_graph_mock.rs  note_graph_ui.rs  read.rs
src/features/note_preview/: mod.rs  note_data.rs  note_preview.rs  note_preview_ui.rs
src/features/veins/: mod.rs  vein.rs  veins.rs  veins_ui.rs
src/lib/: graph.rs  images_cache.rs  markdown.rs  note_graph.rs  publisher.rs  serial_test.rs  temp_file.rs  test.rs
src/lib/fdp/: eades_custom.rs  mod.rs
src/lib/path/: mod.rs  path_extensions.rs
src/ui/: checkbox.rs  mod.rs  note.rs  reset_button.rs  selectable_item.rs
tests/: config.json  config_write.json  first_config.json  first_config_write.json  second_config.json  second_config_write.json
tests/configuration/: config.json  config_write.json  first_config.json  first_config_partial.json  first_config_write.json  second_config.json  third_config.json
tests/notes/: basalt.md  bio.md  build-tool.md  cargo.md  index.md  interests.md  internets.md  me.md  note-taking-software.md  programming-language.md  programming.md  rust.md  software.md  test_markdown_first.md  wikipedia.md
tests/notes/diary/: 20230803101243-walkdir.md
