[package]
name = "basalt"
version = "0.1.0"
edition = "2021"

[package.metadata.docs.rs]
all-features = true

[lib]
crate-type = ["cdylib", "rlib"]

# [features]
# default = ["glow", "persistence"]
# default = ["persistence"]

# http = ["ehttp", "image", "poll-promise", "egui_extras/image"]
# persistence = ["eframe/persistence", "egui/persistence", "serde"]
# web_screen_reader = ["eframe/web_screen_reader"]                  # experimental
# serde = ["dep:serde", "egui_demo_lib/serde", "egui/serde"]
# serde = ["dep:serde", "egui/serde"]
# syntax_highlighting = ["egui_demo_lib/syntax_highlighting"]

# glow = ["eframe/glow"]
# wgpu = ["eframe/wgpu", "bytemuck"]


[dependencies]
# chrono = { version = "0.4", default-features = false, features = [
#   "js-sys",
#   "wasmbind",
# ] }
eframe = { version = "0.22.0", default-features = false, features = [
  # "default_fonts",
  "glow",
  # "persistence",
] }
egui = { version = "0.22.0", features = [
  "extra_debug_asserts",
  "serde",
] }
# egui_demo_lib = { version = "0.22.0", features = [
#   "chrono",
# ] }
log = { version = "0.4", features = ["std"] }

# Optional dependencies:

# bytemuck = { version = "1.7.1", optional = true }
# egui_extras = { version = "0.22.0", optional = true }

# feature "http":
# ehttp = { version = "0.2.0", optional = true }
# image = { version = "0.24", optional = true, default-features = false, features = [
#   "jpeg",
#   "png",
# ] }
# poll-promise = { version = "0.2", optional = true, default-features = false }

# feature "persistence":
# serde = { version = "1", optional = true, features = ["derive"] }
serde = { version = "1.0.169", features = ["derive"] }
serde_json = "1.0.103"
# lazy_static = "1.4.0"
directories = "5.0.1"
walkdir = "2.3.3"
uuid = { version = "1.4.1", features = ["v4"] }
# lazy_static = "1.4.0"

[dev_dependencies]

# native:
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
env_logger = "0.10"

# web:
[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "=0.2.86"
wasm-bindgen-futures = "0.4"
web-sys = "0.3"

# Fast and small wasm
[profile.release]
opt-level = 2 

# Optimize all dependencies even in debug builds:
[profile.dev.package."*"]
opt-level = 2
